--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Pokemon';
+  src: url(../public/fonts/Pokemon\ Hollow.ttf);
+}
+
+html {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +14,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-image: linear-gradient(to top left, #f9d976 0%, #f39f86 100%);
+  color: #eee;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font-size: 50px;
+  font-family: 'Pokemon';
+  text-align: center;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.6);
 }
