--- a/src/components/Pokemon.css
+++ b/src/components/Pokemon.css
@@ -11,7 +11,7 @@
     margin-bottom: 10px;
 }
 
-.buttons button {
+.buttons button, .set {
     padding: 10px 50px;
     border: none;
     background-color: white;
@@ -25,9 +25,30 @@
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
 
-.buttons button:active {
+.buttons button:active, .set {
     transform: translateY(2px);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
+
+.seters {
+    margin: 0;
+}
+
+input[type="text"] {
+    margin-right: 5px;
+    text-align: center;
+    padding: 10px 10px;
+    width: 5%;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+    color: #444;
+    font-size: 1.4rem;
+    border-radius: 20px;
+}
+
+input[type="text"] {
+    outline: none;
 }
 
 .pokemon {
