--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,18 @@
   src: url(../public/fonts/Pokemon\ Hollow.ttf);
 }
 
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url(../public/fonts/founders-grotesk-bold.ttf);
+}
+
 html {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Founders Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
